@@ -16,6 +16,7 @@ ppt = 1e-12 # parts per trillion
 hecto = 1e2
 kilo = 1e3
 centi = 1e-2
+micro = 1e-6
 M_d = 28.97 # kg kmol^-1; effective molecular weight of dry air; Wallace and Hobbs
 M_w = 18.016 # kg kmol^-1; molecular weight of H2O (Wallace and Hobbs)
 KiB = 2**10
